# my-template

./: .gitignore  AmazonQ.md  CMakeLists.txt  CMakeLists.txt.orig  LICENSE  README.md  README_IMGUI.md  README_external.md  README_openssl.md  app_state.json  get-external.sh  imgui.ini  pytest.ini  requirements.txt  setup-hooks.sh
android/: OPENSSL.md  build.gradle  clean-openssl.sh  convert_icons.sh  create_default_icons.sh  gradle.properties  log  settings.gradle  siretage.asmx
android/app/: build.gradle  openssl.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/imguihelloworld/: ImGuiJNI.java  (+3 more)
android/app/src/main/python/stock_monitoring_app/: config.py
android/app/src/main/python/stock_monitoring_app/fetchers/: __init__.py  coingecko_fetcher.py
android/app/src/main/python/stock_monitoring_app/indicators/: atr_indicator.py  base_indicator.py  bollinger_bands_indicator.py  breakout_indicator.py  ma_indicator.py  rsi_indicator.py  volume_spike_indicator.py
android/app/src/main/python/stock_monitoring_app/monitoring/: ticker_monitor.py
android/app/src/main/python/stock_monitoring_app/strategies/: base_strategy.py
android/app/src/main/res/values/: colors.xml  strings.xml
android/include/: cacert_pem_data.hpp  logger.h  platform_http_client.hpp  scaling_manager.h  worker.hpp
android/include/platform/: platform_android.h  platform_base.h  platform_glfw.h  platform_wasm.h
backtest_outputs/: BITCOIN_1d_1m_20250527_102732_UTC_metrics.json  BITCOIN_1d_1m_20250527_102732_UTC_results.csv  RIPPLE_1d_1m_20250531_091739_UTC_metrics.json  RIPPLE_1d_1m_20250531_091739_UTC_results.csv  bitcoin_1d_1m_20250526_162609_UTC_metrics.json  bitcoin_1d_1m_20250526_162609_UTC_results.csv
examples/: __init__.py  run_backtest_example.py  run_fetcher_example.py  run_indicators_example.py  run_process_manager_example.py  run_strategy_example.py  run_ticker_monitor_example.py
forwardtest_output/: 20250526_162610_bitcoin_forwardtest.json  20250531_090836_BITCOIN_forwardtest.json  20250531_091209_BITCOIN_forwardtest.json  20250531_091322_BITCOIN_forwardtest.json  20250531_091445_BITCOIN_forwardtest.json  20250531_091552_BITCOIN_forwardtest.json  20250531_091740_RIPPLE_forwardtest.json  20250531_091911_BITCOIN_forwardtest.json  20250531_093225_RIPPLE_forwardtest.json
hooks/: pre-push
include/: application.h  base_fetcher.hpp  cacert_pem_data.hpp  cacert_pem_data.hpp   http_client_curl.hpp  logger.h  ma_indicator.hpp  macd_indicator.hpp  rsi_indicator.hpp  scaling_manager.h  settings_manager.h  state_manager.h  theme_manager.h  volume_spike_indicator.hpp  worker.hpp
include/app/: atr_indicator.hpp  base_indicator.hpp  bollinger_bands_indicator.hpp  breakout_indicator.hpp  indicator_factory.hpp  ma_indicator.hpp  macd_indicator.hpp  polygon_fetcher.hpp  rsi_indicator.hpp  volume_spike_indicator.hpp
include/platform/: font_manager.h  http_client.hpp  platform_android.h  platform_base.h  platform_font_utils.h  platform_glfw.h  platform_http_client.hpp  platform_logger.h  platform_sdl.h  scaling_manager.h  settings_manager.h  state_manager.h  tempfile.hpp  worker.hpp  write_cacert.hpp
include/platform/android/: keyboard_helper.h  platform_android_logger.h
include/platform/linux/: asset_manager.h
include/widget/: log_widget.h
java/com/my/app/: ImGuiJNI.java  MainActivity.java
linux/: README.md  build-and-run.sh  build.gradle  download-dependencies.sh  download-glfw.sh  gradle.properties  imgui.ini  settings.gradle
linux/app/: build.gradle
src/: application.cpp  atr_indicator.cpp  base_fetcher.hpp  bollinger_indicator.cpp  breakout_indicator.cpp  coingecko_fetcher.cpp  coingecko_fetcher.hpp  font_manager.cpp  http_client.hpp  http_client_curl.cpp  http_client_curl.hpp  log_widget.cpp  logger.cpp  ma_indicator.cpp  macd_indicator.cpp  main.cpp  polygon_fetcher.cpp  polygon_fetcher.hpp  rsi_indicator.cpp  settings_manager.cpp  state_manager.cpp  tempfile.cpp  theme_manager.cpp  volume_spike_indicator.cpp  worker.cpp  write_cacert.cpp  write_cacert.hpp
src/app/: app_main.cpp  atr_indicator.cpp  bollinger_indicator.cpp  breakout_indicator.cpp  coingecko_fetcher.cpp  indicator_factory.cpp  ma_indicator.cpp  macd_indicator.cpp  rsi_indicator.cpp  volume_spike_indicator.cpp
src/layout/: Layout.cpp  Layout.h
src/platform/: font_manager.cpp  http_client.cpp  logger.cpp  main.cpp  platform_android.cpp  platform_base.cpp  platform_glfw.cpp  platform_logger.cpp  platform_sdl.cpp  python.h  settings_manager.cpp  state_manager.cpp  tempfile.cpp  worker.cpp  write_cacert.cpp
src/platform/android/: android_main.cpp  android_native_app_glue.c  android_native_app_glue.h  android_scaling_fix.cpp  imgui_impl_android.cpp  imgui_impl_android.h  jni_bridge.cpp  jni_bridge.h  keyboard_helper.cpp  keyboard_helper.h  platform_android_logger.cpp  platform_font_utils.cpp  python_bridge.cpp  python_object_initializer.hpp
src/platform/linux/: asset_manager.cpp  platform_font_utils.cpp
src/widget/: log_widget.cpp
stock_monitoring_app/backtest/: __init__.py  backtest.py
stock_monitoring_app/cli/: monitor.py
stock_monitoring_app/fetchers/: base_fetcher.py  polygon_fetcher.py
stock_monitoring_app/indicators/: __init__.py  macd_indicator.py
stock_monitoring_app/strategies/: __init__.py
stock_monitoring_app/ui/: urwid_main.py
stock_monitoring_app/utils/: notification.py  process_manager.py
tests/: conftest.py
tests/backtest/: __init__.py  test_backtest.py
tests/cli/: test_monitor_cli.py
tests/fetchers/: __init__.py  integration_coingecko_fetcher.cpp  integration_polygon_fetcher.cpp  test_coingecko_fetcher.py  test_polygon_fetcher.py
tests/indicators/: test_atr.cpp  test_bollinger.cpp  test_bollinger.py  test_breakout.cpp  test_ma.cpp  test_macd.cpp  test_macd_indicator.py  test_rsi.cpp  test_rsi_indicator.py  test_volume_spike.cpp
tests/integrations/: test_full_pipeline.py
tests/monitoring/: __init__.py  test_ticker_monitor.py
tests/strategies/: test_base_strategy.py
tests/utils/: __init__.py  test_process_manager.py
(+7 files in other folders)
